--- a/phonebook/package.json
+++ b/phonebook/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "phonebook",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "license": "ISC",
@@ -7,12 +7,14 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
   },
   "dependencies": {
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
