--- a/notes/package.json
+++ b/notes/package.json
@@ -10,7 +10,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -22,8 +23,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@stylistic/eslint-plugin": "^2.12.1",
     "@stylistic/eslint-plugin-js": "^2.12.1",
-    "eslint": "^0.4.2",
+    "eslint": "^9.17.0",
     "globals": "^15.14.0",
     "nodemon": "^3.1.9"
   }
